# MyGPT

./: .gitignore  AGENTS.md  History.md  Project_state.md  README.md  base_assistant_system_prompt_non_negotiable.md  final_prd_logical_low_friction_ai_chat_system.md  next_tasks.md  session-ses_44fd.md  tips.txt
.not-needed/: package.json  prd_deviation_corrections_required_amendments.md
docs/: agent-guidelines.md  approval-drills.md  deviation-policy.md  guardrails.md  implementation-plan.md  perf-notes.md  state-and-storage.md  tools.md
model-switch/: FILES_LIST.md  IMPLEMENTATION_SUMMARY.md  MODEL_SWITCHER_README.md  QUICK_START.md  model_switcher.ps1  models.json  stop_llama.ps1  test_model_switcher.ps1
plans/: feasibility_analysis.md
scripts/: ensure-dev.ps1  measure-backend-idle.ps1  measure-backend-startup.ps1  measure-ttft.ps1  measure-ui-startup.ps1  start-dev.ps1
src/backend/: app.py  model_gateway.py  response_policy.py  schema.sql
src/backend/tools/: __init__.py  registry.py
src/ui/: index.html  package.json
src/ui/src/: App.tsx
src/ui/src-tauri/: Cargo.toml  tauri.conf.json
system/: base_assistant_prompt.md  base_assistant_prompt.sha256
tests/: test_integration.py  test_response_policy.py  test_tools.py
